# GPT-Oui-Oui

./: README.md
ChatGPT-Oui-Oui/: pyproject.toml
ChatGPT-Oui-Oui/chatgpt_oui_oui/: main.py
